# smart_finder_chatbot

./: .firebaserc  .gitignore  ACCESS_OAUTH_CONSENT_ALTERNATIVE.md  ADD_TEST_USERS.md  API_KEYS_EXPLANATION.md  API_KEYS_STATUS.md  API_KEYS_USAGE_SUMMARY.md  AUTO_SYNC_COMPLETE.md  AUTO_SYNC_EXPLAINED.md  BACKEND_AUTO_SYNC.md  CHECK_CURRENT_PAGE.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_MCP_FOLDER.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_USER_GUIDE.md  DATA_ACCESS_EXPLAINED.md  DEBUG_CHATBOT_ISSUES.md  DEBUG_YOUTUBE_SYNC.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_PROCESS.md  DEPLOYMENT_STATUS.md  DEVELOPER_VS_USER_SETUP.md  FALLBACK_CONFIGURATION.md  FIREBASE_SETUP.md  FIX_GOOGLE_OAUTH_VERIFICATION.md  FIX_TEST_USER_ERROR.md  FIX_TOKEN_EXPIRATION.md  FRONTEND_FEATURES.md  GEMINI_SETUP.md  GEMINI_V2_INTEGRATION_COMPLETE.md  GITHUB_SETUP.md  GITHUB_STATUS.md  GOOGLE_OAUTH_EXPLANATION.md  GOOGLE_TEST_USERS_LIMITATION.md  HOW_UNIFIED_AUTH_WORKS.md  IMPLEMENTATION_GUIDE.md  ISSUES_FIXED.md  LLM_COMPARISON.md  MCP_COMPARISON_ANALYSIS.md  MCP_IMPLEMENTATION_COMPLETE.md  (+67 more)
android/app/src/main/jni/: CMakeLists.txt  llama_jni.cpp
android_helper/: README.md  architecture.md
autofinder_mcp_full/: .env.example  README.md
chrome_extension/: README.md  background.js  content.js  icon_placeholder.txt  popup.html  popup.js
functions/: index.js  package.json  readme.md
lib/: app.dart  firebase_options.dart  main.dart
public/: firebase-config.js  index.html  package.json
smartfinder_full_gemini_package_v2/: .env.example  README.txt  firebase.json
smartfinder_v3_pkce_package/: .env.example  (+2 more)
(+114 files in other folders)
